# maurc

./: .gitignore  Cargo.toml  index.html  styles.css
.github/workflows/: android-release.yml
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
