[package]
name = "taurc-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Bevy configured for WASM: use default plugins and WebGL2
bevy = { version = "0.14", features = ["webgl2"] }
rand = "0.8"
console_error_panic_hook = "0.1.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1", features = ["js"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Event"] }

[workspace]
members = ["src-tauri"]
